--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=0.86, maximum-scale=3.0, minimum-scale=0.86 viewport-fit=cover">
-  <title>Odin Project Etch-a-Sketch</title>
+  <title>Etch-a-Sketch</title>
   <link rel="stylesheet" type="text/css" href="style.css">
   <link href="https://fonts.googleapis.com/css?family=Bungee+Inline|Open+Sans" rel="stylesheet">
 </head>
@@ -12,7 +12,7 @@
     <div id="div-screen"><!--New divs will be generated here--></div>
     <div id="div-below-screen">
       <button id="button-reset" class="below-screen-buttons">Reset</button>
-      <h1 id="h1-title">Odin-Sketch</h1>
+      <h1 id="h1-title">Etch A Sketch</h1>
       <button id="button-toggle-colors" class="below-screen-buttons">Color</button>
     </div>
   </div>
